[package]
name = "generic_robot_framework_cli"
version = "0.1.0"
authors = ["julien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
generic_robot_framework = { path = "..\\lib" }