[package]
name = "generic_robot_framework_cli"
version = "0.1.0"
authors = ["julien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
generic_robot_framework = { path = "..\\lib" }
clap_complete = "4.3.2"
cargo-manifest = "0.9.0"
jsonschema = "0.17.1"
json_pretty = "0.1.2"
directories = "5.0.1"
winreg = "0.50.0"
